# sdnext

./: .dockerignore  .eslintrc.json  .gitconfig  .gitignore  .gitmodules  .instructions.md  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  .ruff.toml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT  CONTRIBUTING  Gemfile  README.md  SECURITY.md  TODO.md  _NOTES.md  _config.yml  constraints.txt  docs.md  eslint.config.mjs  index.md  installer.py  launch.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  rocm-config.json  webui.bat  webui.ps1  webui.py  webui.sh
.github/: copilot-instructions.md
_data/: readme_sections.json
_layouts/: default.html
assets/: main.scss
cli/: api-caption.py  api-checkpoint.py  api-control.py  api-detect.py  api-enhance.py  api-faceid.py  api-grid.py  api-history.py  api-img2img.py  api-info.py  api-interrogate.py  api-json.py  api-mask.py  api-preprocess.py  api-progress.py  api-pulid.js  api-samplers.py  api-txt2img.js  api-txt2img.py  api-upscale.py  api-vqa.py  api-xyz.py  api-xyzenum.py  benchmark_attention.py  civitai-search.py  create-previews.py  docs.py  download-file.py  fetch_dicts.py  fetch_tags.py  gen-styles.py  gen_manifest.py  generate.json  generate.py  hf-info.py  hf-search.py  image-exif.py  image-palette.py  image-search.py  lcm-convert.py  (+22 more)
configs/: Dockerfile.cuda  Dockerfile.ipex
core/: __init__.py  model_data.py
data/: cache.json  extensions.json  metadata.json  previews.json  reference-base.json  reference-cloud.json  reference-community.json  reference-distilled.json  reference-nunchaku.json  reference-quant.json  reference-quantized.json  reference.json  rocm-config.json  themes.json
docs/: unified-input-system.md
extensions-builtin/: sdnext-kanvas
frontend/: eslint.config.js  index.html  package.json  vite.config.ts
html/: .reference.json.swp  art-styles.json  licenses.html  locale_ar.json  locale_bn.json  locale_de.json  locale_en.json  locale_es.json  locale_fr.json  locale_he.json  locale_hi.json  locale_hr.json  locale_id.json  locale_it.json  locale_ja.json  locale_ko.json  locale_nb.json  locale_po.json  locale_pt.json  locale_qq.json  locale_ru.json  locale_sr.json  locale_tb.json  locale_tlh.json  locale_tr.json  locale_ur.json  locale_vi.json  locale_xx.json  locale_zh.json  override_hr.json  override_ko.json  pipeline-viz.html  previews.json  reference-cloud.json  reference-community.json  reference-distilled.json  reference-quant.json  reference.json  swagger.css
javascript/: _simpleProgressBar.js  amethyst-nightfall.css  aspectRatioOverlay.js  authWrap.js  autocomplete.js  autocomplete_xn.js  base.css  black-gray.css  black-orange.css  black-teal-reimagined.css  black-teal.css  changelog.js  civitai.js  contextMenus.js  control.js  docs.js  dragDrop.js  emerald-paradise.css  extraNetworks.js  gallery.js  generationParams.js  gpu.js  guidance.js  history.js  imageParams.js  imageViewer.js  indexdb.js  invoked.css  light-teal.css  loader.js  logMonitor.js  logger.js  login.js  midnight-barbie.css  monitor.js  nvml.js  orchid-dreams.css  panZoom.js  pipeline-viz.js  progressBar.js  (+14 more)
modules/: __init__.py  attention.py  cachedit.py  call_queue.py  cmd_args.py  detailer.py  devices.py  devices_mac.py  enso.py  errorlimiter.py  errors.py  extensions.py  extra_networks.py  extras.py  files_cache.py  generation_parameters_copypaste.py  gr_hijack.py  gr_tempdir.py  hashes.py  history.py  images.py  images_grid.py  images_namegen.py  images_resize.py  images_sharpfin.py  img2img.py  infotext.py  infotext_utils.py  interposer.py  ipadapter.py  json_helpers.py  lama.py  loader.py  localization.py  logger.py  masking.py  memmon.py  memstats.py  migrate.py  mit_nunchaku.py  (+162 more)
pipelines/: generic.py  generic_map.py  generic_shared.py  generic_test.py  generic_text_encoder.py  generic_transformer.py  generic_util.py  generic_vae.py  model_anima.py  model_auraflow.py  model_boogu.py  model_bria.py  model_chroma.py  model_chrono.py  model_cogview.py  model_cosmos.py  model_ernie.py  model_flex.py  model_flite.py  model_flux.py  model_flux2.py  model_flux2_klein.py  model_flux_nf4.py  model_glm.py  model_google.py  model_hdm.py  model_hidream.py  model_hunyuandit.py  model_hyimage.py  model_ideogram4.py  model_instaflow.py  model_joy.py  model_kandinsky.py  model_kolors.py  model_krea2.py  model_lens.py  model_longcat.py  model_lumina.py  model_mageflow.py  model_meissonic.py  (+24 more)
scripts/: allegrovideo.py  animatediff.py  apg.py  autocomplete.py  automatic_color_inpaint.py  blipdiffusion.py  build-pages.py  cogvideo.py  color_grading.py  consistory_ext.py  ctrlx.py  ctrlx_ext.py  custom_code.py  daam_ext.py  demofusion.py  differential_diffusion.py  example.py  flux_enhance.py  flux_prompt_enhance.py  flux_tools.py  freescale_ext.py  hdr.py  hunyuanvideo.py  i2i_folder.py  image2video.py  infiniteyou_ext.py  init_latents.py  instantir_ext.py  ipadapter.py  ipinstruct.py  k_diff.py  kohya_hires_fix.py  layerdiffuse_ext.py  lbm_ext.py  ledits.py  legacy_allegrovideo.py  loopback.py  ltxvideo.py  lut.py  mixture_of_diffusers.py  (+38 more)
sdnext_core/: __init__.py  errorlimiter.py  model_data.py
test/: benchmark_attention.py  check-docs  full-test.sh  locale-sanitize-override.py  localize.mjs  reformat-json.js  reformat.js  test-anima-native-adapters.py  test-caption-api.py  test-chroma-native-adapters.py  test-compile.py  test-detailer-api.py  test-ernie-native-adapters.py  test-flux2-native-adapters.py  test-generation-api.py  test-grading.py  test-ideogram-native-adapters.py  test-ideogram4-parity.py  test-ideogram4-smoke.py  test-krea2-native-adapters.py  test-krea2-transformer.py  test-native-transformer.py  test-override-mismatch-api.py  test-reference.py  test-samplers-api.py  test-schedulers.py  test-tagger.py  test-weighted-lists.py  test-zimage-native-adapters.py  validate-locale.py
ui/: .build.json  aspectRatioOverlay.ts  authWrap.ts  autocomplete.ts  autocomplete_xn.ts  changelog.ts  civitai.ts  contextMenus.ts  control.ts  docs.ts  dragDrop.ts  extensions.ts  (+34 more)
(+1204 files in other folders)
